--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.38.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "easyinvoice": "^3.0.25",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
