--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "easyinvoice": "^3.0.25",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   }
